[metadata]
name = blocked-matrix-utils
version = attr: util.__version__
author = Olav Vahtras
author_email = olav.vahtras@gmail.com
license = MIT
license_file = LICENSE.txt
description = NumPy wrappers for blocked matrices
long_description = file: README.md
url = https://github.com/vahtras/util
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Mathematics

[options]
packages = util
install_requires =
    scipy
